# rocket-banking

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  publish.yml
compose/: compose.yaml
src/: main.rs
src/client/: bank_client.rs  mock_bank_client.rs  mod.rs
src/model/: bank.rs  bank_enum.rs  credentials.rs  mod.rs
src/service/: bank_service.rs  mod.rs
