[package]
name = "rocket-banking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.rocket]
version = "=0.5.0-rc.4"
features = ["json"]